Fixing IE8 layout bugs

--- a/src/_1_modules/demo/demo.scss
+++ b/src/_1_modules/demo/demo.scss
@@ -32,6 +32,7 @@
 
 	&__summary {
 		.markdown-body & {
+			display: block;
 			background-color: #CDDEC4;
 			padding: 20px;
 			margin-top: 70px;
