--- a/src/_1_modules/tabs/tabs.scss
+++ b/src/_1_modules/tabs/tabs.scss
@@ -8,6 +8,13 @@
 		margin-bottom: 9px;
 		border: 1px solid $CB-green-dark;
 		border-radius: 3px;
+		overflow: hidden;
+
+		.lt-ie9 & {
+			.grid, .grid__cell {
+				border-color: $CB-green-pale;
+			}
+		}
 
 		.no-js & {
 			display: none;
